Update M1NB1 link

--- a/module_1/M1_NB1_PythonIntro.ipynb
+++ b/module_1/M1_NB1_PythonIntro.ipynb
@@ -1406,7 +1406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The basic random function was used in the example above, but you can visit Big Data Examiner to see an example of [implementing other probability distributions](http://bigdataexaminer.com/data-science/how-to-implement-these-5-powerful-probability-distributions-in-python/)."
+    "The basic random function was used in the example above, but you can visit Big Data Examiner to see an example of [implementing other probability distributions](http://bigdata-madesimple.com/how-to-implement-these-5-powerful-probability-distributions-in-python/)."
    ]
   },
   {
@@ -1595,7 +1595,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
    "outputs": [],
    "source": [
     "# The histogram of the data.\n",
-    "plt.hist(M, range=(-0.5,ntrials+0.5),bins=ntrials)\n",
+    "plt.hist(M, range=(0,ntrials),bins=ntrials)\n",
     "plt.xlabel('Number  of heads')\n",
     "plt.ylabel('Frequency')\n",
     "plt.title('Coin flip distribution')"
