--- a/module_5/M5_NB2_BandicootMachineLearning.ipynb
+++ b/module_5/M5_NB2_BandicootMachineLearning.ipynb
@@ -130,6 +130,8 @@
     "You are encouraged to visit and read Scikit-learn’s [practical advice on machine learning](http://www.astroml.org/sklearn_tutorial/practical.html), with special regard to the summary section.\n",
     "\n",
     "\n",
+    "<img src=\"biasvariance.png\", width=400, height=450>\n",
+    "\n",
     "\n",
     "\n",
     "In summary, predictive model-building, with machine learning, involves the following sequential steps:\n",
