--- a/module_6/M6_NB2_Privacy_by_Design.ipynb
+++ b/module_6/M6_NB2_Privacy_by_Design.ipynb
@@ -385,7 +385,7 @@
     "    return True\n",
     "\n",
     "def compute_unicity(samples, points):\n",
-    "    '''IN:int'''\n",
+    "    '''IN:int, int'''\n",
     "    unique_count = .0\n",
     "    \n",
     "    users = samples.columns\n",
@@ -396,7 +396,7 @@
     "    return unique_count / len(samples.columns)\n",
     "\n",
     "def iterate_unicity(samples, points=4, iterations=10):\n",
-    "    \n",
+    "    '''IN:int, int, int'''    \n",
     "    unicities = []\n",
     "    for _ in tqdm(range(iterations)):\n",
     "        unicities.append(compute_unicity(samples, points))\n",
